--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Builder Giant</title>
+    <title>SRM Marketplace</title>
 
     <meta name="description" content="">
 
