--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
     <div ui-view></div>
     </div>
 
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
