--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <div ui-view></div>
     </div>
 
-    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
