--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
     <meta name="description" content="">
 
+      <script type="text/javascript" src="https://js.braintreegateway.com/v1/braintree.js">
+      </script>
+
 
 
 
