--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
       <script type="text/javascript" src="https://js.braintreegateway.com/v1/braintree.js">
       </script>
 
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
+
 
 
 
